--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a Jupyter Notebook detailing my analysis of a dataset containing samples to be classified as either "edible" or "poisonous".
+
+I worked on this project during May 2024.
